--- a/pom.xml
+++ b/pom.xml
@@ -22,6 +22,10 @@
     <dependencies>
 
         <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-thymeleaf</artifactId>
+        </dependency>
+        <dependency>
             <groupId>com.alibaba</groupId>
             <artifactId>druid</artifactId>
             <version>1.1.0</version>
@@ -45,6 +49,19 @@
             <scope>test</scope>
         </dependency>
 
+        <!--集成security-->
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-security</artifactId>
+        </dependency>
+
+        <dependency>
+            <groupId>org.mybatis.spring.boot</groupId>
+            <artifactId>mybatis-spring-boot-starter</artifactId>
+            <version>1.3.1</version>
+        </dependency>
+
+
         <!-- 与数据库操作相关的依赖 -->
         <dependency>
             <groupId>org.springframework.boot</groupId>
@@ -62,8 +79,8 @@
         <dependency>
             <groupId>mysql</groupId>
             <artifactId>mysql-connector-java</artifactId>
+            <version>5.1.38</version>
         </dependency>
-
         <!--&lt;!&ndash; mybatisplus与springboot整合 &ndash;&gt;-->
         <dependency>
             <groupId>com.baomidou</groupId>
@@ -109,12 +126,12 @@
                     <configurationFile>src/main/resources/generatorConfig.xml</configurationFile>
                 </configuration>
                 <dependencies>
-                    <!-- 数据库驱动 -->
-                    <dependency>
-                        <groupId>mysql</groupId>
-                        <artifactId>mysql-connector-java</artifactId>
-                        <version>5.1.38</version>
-                    </dependency>
+                    <!--&lt;!&ndash; 数据库驱动 &ndash;&gt;-->
+                    <!--<dependency>-->
+                        <!--<groupId>mysql</groupId>-->
+                        <!--<artifactId>mysql-connector-java</artifactId>-->
+                        <!--<version>5.1.38</version>-->
+                    <!--</dependency>-->
                 </dependencies>
             </plugin>
         </plugins>
