--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,9 +1,10 @@
 # 驱动配置信息
 spring.datasource.type=com.alibaba.druid.pool.DruidDataSource
-spring.datasource.url = jdbc:mysql://127.0.0.1:3306/nickdb
+spring.datasource.url = jdbc:mysql://127.0.0.1:3306/nickdb/cnblogs?serverTimezone=Asia/Shanghai&characterEncoding=utf8
 spring.datasource.username = root
 spring.datasource.password = mysql720
-spring.datasource.driverClassName = com.mysql.cj.jdbc.Driver
+spring.datasource.driverClassName = com.mysql.jdbc.Driver
+
 # 连接池的配置信息
 # 初始化大小，最小，最大
 spring.datasource.initialSize=5
@@ -26,3 +27,6 @@ spring.datasource.maxPoolPreparedStatementPerConnectionSize=20
 spring.datasource.filters=stat,wall,log4j
 # 通过connectProperties属性来打开mergeSql功能；慢SQL记录
 spring.datasource.connectionProperties=druid.stat.mergeSql=true;druid.stat.slowSqlMillis=5000
+
+# 定位模板的目录
+spring.thymeleaf.prefix=classpath:/templates/
